--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -107,7 +107,7 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.JPG.GIF.XPM.PNG.BMP.TIF.tbn., qiv -m -l -f "%f" & 
 #ux=VIEW pic,INS,.thm.THM., feh "%F" 
 #feh -F  "%F" 2>/dev/null & 
-ux=VIEW doc,INS,.doc.DOC.docx.xls.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
+ux=VIEW doc,INS,.doc.DOC.docx.xls.xlsx.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
 ux=VIEW PDF,INS,.pdf.PDF.,pdf "%f" 1> /dev/null 2> /dev/null &
 ux=VIEW PS,INS,.ps.,gv "%f"&
 ux=VIEW HTML,INS,.htm.html.shtml.,lynx "%F"
@@ -124,8 +124,10 @@ ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
 
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
+ux=truncate,F5,.mp3.,echo > "%F" 
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.flac.ape.wv.,sumtim2.py "%F" %w
+ux=info,F6,.[].<>.mkv.mp4.,mkvmerge -i "%F" %w
 ux=sumtim,F9,.[].<>.,make -f /home/az/src/bin/audiovideo/makefile tags -C "%f" 
 
 # edit
@@ -136,7 +138,7 @@ ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
 #gvim
 ux=EDIT any,F7,*,gvim "%f" &
 #xterm+vim
-ux=EDITmany,F10,*,axfce4term -x vim "%f" &
+ux=EDITmany,F10,*,myterm vim "%f" &
 
 ux=FILE INFO,F8,*,file -L "%f" %w
 
@@ -206,6 +208,7 @@ see=*.mpg,filmid.sh "%f"
 see=*.mpeg,filmid.sh "%f"
 see=*.vob,filmid.sh "%f"
 see=*.flac,filmid.sh "%f"
+see=*.ape,filmid.sh "%f"
 see=*.png,file "%f" 
 see=*.pnm,pnmfile "%f" 
 see=*.jpg,jhead "%f" 
@@ -213,6 +216,7 @@ see=*.JPG,jhead "%f"
 see=*.jpeg,jhead "%f" 
 see=*.tbn,jhead "%f" 
 see=*.torrent,btshowmetainfo "%f"
+see=*.torrent.added,btshowmetainfo "%f"
 
 # this is a hack to view Qt man pages
 #see=*.[1234567890][a-zA-Z]t?,man "%F"
