--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -117,7 +117,8 @@ ux=VIEW TAR,INS,.gz.,gunzip -c "%f" | tar tvf - | less
 ux=run python,INS,.py.,python "%F" %w
 
 # play media
-ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.webm.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.iso.,mplayer -zoom -fs "%f"  2> /dev/null
+ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
+ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
 ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
