--- a/foto/makefile
+++ b/foto/makefile
@@ -1,7 +1,7 @@
 ROOT ?= ./
 
 all:
-	@echo i3c ? i6c ? ren6v ? opt ? optjpg
+	@echo i3c ? i6c ? ren6v ? opt ? optjpg ? autorot ?autodate
 
 BIN = $(dir $(MAKEFILE_LIST))
 
@@ -10,10 +10,19 @@ i3c 3c c3 300: ren3
 ren3:
 	rename.pl 'y/A-Z/a-z/+s/_/1/' $(ROOT)*JPG $(ROOT)*jpg
 
+ix index:
+	~/src/bin/foto/indexer.sh *.jpg > index.html
+autorot:
+	jhead -autorot $(ROOT)*.jpg
+autodate:
+	jhead -ft $(ROOT)*.jpg
+
 OPTs=$(wildcard $(ROOT)*.jpg)
 OPTs1=$(wildcard $(ROOT)*.JPG)
 
-opt: $(OPTs:%.jpg=%.opt) $(OPTs1:%.JPG=%.opt)
+jpg2opt: $(OPTs:%.jpg=%.opt) $(OPTs1:%.JPG=%.opt)
+opt: jpg2opt
+	$(MAKE) -f $(MAKEFILE_LIST) opt1jpg
 
 %.opt: %.jpg
 	jhead "$<" | grep -i progressive || jpegtran -optimize -progressive -copy all -outfile "$@" "$<"
@@ -35,23 +44,36 @@ opt3: $(OPTs:%.jpg=%.opt3)
 %.opt3: %.jpg
 	$(BIN)/jpgoptmz1.sh $<
 
+#AUTOROT=1
 2: $(OPTs:%.jpg=2/%.jpg)
 2/%.jpg: %.jpg
 	-$(BIN)/2small.sh $<
 
+#AUTOROT=1
 4: $(OPTs:%.jpg=4/%.jpg)
 4/%.jpg: %.jpg
 	-SCALE=4 $(BIN)/2small.sh $<
 
 optjpg:
-	rename.pl 's/opt/jpg/' $(ROOT)*.opt
+	rename.pl 's/opt$$/jpg/' $(ROOT)*.opt
 
 600 c6 6c i6c: ren6
 	$(MAKE) -f $(MAKEFILE_LIST) opt
 	$(MAKE) -f $(MAKEFILE_LIST) optjpg
+	$(MAKE) -f $(MAKEFILE_LIST) autodate
 ren6:
 	rename.pl 'y/A-Z/a-z/;s/img_/i6c0/' $(ROOT)*.JPG $(ROOT)*.jpg
 ren6v:
 	rename.pl 'y/A-Z/a-z/;s/mvi_/v6c0/' $(ROOT)*.MOV* $(ROOT)*.mov*
+
+diffix:
+	diff -btw index.html .. | perl -ne 'print if s/.*"(.*)".*/$$1 /' > ../rmm
+
+view:
+	qiv -s -m -i -f -d 1 *.jpg
+%.ffmpeg.mkv: %.MOV
+	ffmpeg -i $< -sameq $@
+%.ffmpeg.mkv: %.mov
+	ffmpeg -i $< -sameq $@
 
 # vim:ts=4:sw=4:noexpandtab
