--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -125,7 +125,7 @@ ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
 
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F5,.mp3.,echo > "%F" 
+ux=truncate,F5,.mp3.flac., > "%F" 
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.flac.ape.wv.,sumtim2.py "%F" %w
 ux=info,F6,.[].<>.mkv.mp4.,mkvmerge -i "%F" %w
