--- a/foto/makefile
+++ b/foto/makefile
@@ -62,9 +62,9 @@ optjpg:
 	$(MAKE) -f $(MAKEFILE_LIST) optjpg
 	$(MAKE) -f $(MAKEFILE_LIST) autodate
 ren6:
-	rename.pl 'y/A-Z/a-z/;s/img_/i6c0/' $(ROOT)*.JPG $(ROOT)*.jpg
+	rename.pl 'y/A-Z/a-z/+s/img_9/i6c09/+s/img_/i6c1/' $(ROOT)*.JPG $(ROOT)*.jpg
 ren6v:
-	rename.pl 'y/A-Z/a-z/;s/mvi_/v6c0/' $(ROOT)*.MOV* $(ROOT)*.mov*
+	rename.pl 'y/A-Z/a-z/+s/mvi_9/v6c09/+s/mvi_/v6c1/' $(ROOT)*.MOV* $(ROOT)*.mov*
 
 diffix:
 	diff -btw index.html .. | perl -ne 'print if s/.*"(.*)".*/$$1 /' > ../rmm
@@ -75,5 +75,8 @@ view:
 	ffmpeg -i $< -sameq $@
 %.ffmpeg.mkv: %.mov
 	ffmpeg -i $< -sameq $@
+
+dati:
+	find . -type d -exec sh -c 'jhead -ft "{}"/*jpg' \;
 
 # vim:ts=4:sw=4:noexpandtab
