--- a/qini/_mplayer/config
+++ b/qini/_mplayer/config
@@ -4,7 +4,7 @@ ac=mp3,
 cache=15000
 #subcp=cp1251
 subcp=enca:bg:cp1251
-font=/usr/share/fonts/truetype/msttcorefonts/Verdana.ttf
+#font=/usr/share/fonts/truetype/msttcorefonts/Verdana.ttf
 #font=/home/az/.mplayer/font/windows-1251-a.raw
 #subfont-encoding=cp1251
 subfont-text-scale=3.5
