--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -117,7 +117,7 @@ ux=VIEW TAR,INS,.gz.,gunzip -c "%f" | tar tvf - | less
 ux=run python,INS,.py.,python "%F" %w
 
 # play media
-ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
+ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
 ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
@@ -125,7 +125,7 @@ ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
 
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F5,.mp3.flac., > "%F" 
+ux=truncate,F5,.mp3.flac.,truncate -s 0 "%F" 
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.flac.ape.wv.,sumtim2.py "%F" %w
 ux=info,F6,.[].<>.mkv.mp4.,mkvmerge -i "%F" %w
@@ -203,6 +203,7 @@ see=*.ts,filmid.sh "%f"
 see=*.mkv,filmid.sh "%f"
 see=*.m4v,filmid.sh "%f"
 see=*.mp4,filmid.sh "%f"
+see=*.3gp,filmid.sh "%f"
 see=*.webm,filmid.sh "%f"
 see=*.swf,filmid.sh "%f"
 see=*.mpg,filmid.sh "%f"
@@ -253,7 +254,7 @@ cCYAN=.[].<>.
 #exe
 cGREEN=.**.
 #media
-cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.webm.raw.nef.wav.mp3.m4a.mpc.ogg.flac.ape.wv.
+cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.flac.ape.wv.
 #link
 chBLUE=.->.
 #cRED=.dotfiles.
