--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -130,7 +130,9 @@ ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.flac.ape.wv.,sumtim2.py "%F" %w
 ux=info,F6,.[].<>.mkv.mp4.,mkvmerge -i "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
-ux=sumtim,F9,.[].<>.,make -f /home/az/src/bin/audiovideo/makefile tags -C "%f" 
+ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f" 
+ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/ 
+ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f" 
 # edit
 ux=EDIT pic,F7,.gif.tiff.jpg.png.,gimp "%f" 2> /dev/null 1> /dev/null %n &
 ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
