--- a/qini/tun/slim/slim.conf
+++ b/qini/tun/slim/slim.conf
@@ -1,19 +1,21 @@
 # Path, X server and arguments (if needed)
 # Note: -xauth $authfile is automatically appended
+#default_path        /bin:/usr/bin:/usr/local/bin
 #XXX PATH: first local then system; sbin: either here or add2path in /etc/profile.d/
-default_path        /usr/local/bin:/usr/bin:/bin:/usr/bin/X11
-#default_path        /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/bin/X11
-default_xserver     /usr/bin/X11/X
-xserver_arguments   -nolisten tcp -dpi 96
+default_path        /usr/local/bin:/usr/bin:/bin
+default_xserver     /usr/bin/X
+#xserver_arguments -nolisten tcp vt07
+xserver_arguments -nolisten tcp vt07 -dpi 96
 
 # Commands for halt, login, etc.
 halt_cmd            /sbin/shutdown -h now
 reboot_cmd          /sbin/shutdown -r now
-console_cmd         /usr/bin/xterm -C -fg gray -bg black +sb -T "Console login" -e /bin/sh -c "/bin/cat /etc/issue.net; exec /bin/login"
+#console_cmd         /usr/bin/xterm -C -fg white -bg black +sb -T "Console login" -e /bin/sh -c "/bin/cat /etc/issue; exec /bin/login"
+console_cmd         /usr/bin/xterm -C -fg gray -bg black +sb -T "Console login" -e /bin/sh -c "/bin/cat /etc/issue; exec /bin/login"
 #suspend_cmd        /usr/sbin/suspend
 
 # Full path to the xauth binary
-xauth_path         /usr/bin/X11/xauth
+xauth_path         /usr/bin/xauth
 
 # Xauth file for server
 authfile           /var/run/slim.auth
@@ -35,7 +37,7 @@ authfile           /var/run/slim.auth
 # to adjust the command according to your preferred shell,
 # i.e. for freebsd use:
 # login_cmd           exec /bin/sh - ~/.xinitrc %session
-login_cmd           exec /bin/bash -login /etc/X11/Xsession %session
+login_cmd           exec /bin/bash -login ~/.xinitrc %session
 
 # Commands executed when starting and exiting a session.
 # They can be used for registering a X11 session with
@@ -49,15 +51,13 @@ login_cmd           exec /bin/bash -login /etc/X11/Xsession %session
 # options "-d" and "-nodaemon"
 # daemon	yes
 
-# Available sessions (first one is the default).
-# The current chosen session name is replaced in the login_cmd
-# above, so your login command can handle different sessions.
-# see the xinitrc.sample file shipped with slim sources
-#XXX the default without choosing/F1 is /etc/alternatives/x-session-manager
-sessions            default,startlxde,openbox-lxde,openbox,startxfce4,ion3,icewm,wmaker,blackbox,awesome
+# Set directory that contains the xsessions.
+# slim reads xsesion from this directory, and be able to select.
+sessiondir            /usr/share/xsessions/
 
 # Executed when pressing F11 (requires imagemagick)
-screenshot_cmd      scrot /tmp/slim.png
+screenshot_cmd      import -window root /slim.png
+#screenshot_cmd      scrot /tmp/slim.png
 
 # welcome message. Available variables: %host, %domain
 welcome_msg         Welcome to %host
@@ -84,11 +84,11 @@ auto_login          yes
 
 # current theme, use comma separated list to specify a set to 
 # randomly choose from
-#current_theme       debian-moreblue-orbit
-current_theme       mytheme
+current_theme       default
+#current_theme       mytheme
 
 # Lock file
-lockfile            /var/run/slim.lock
+lockfile            /var/lock/slim.lock
 
 # Log file
 logfile             /var/log/slim.log
