--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -118,7 +118,7 @@ ux=run python,INS,.py.,python "%F" %w
 
 # play media
 ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
-ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.,mplayer -novideo -noautosub "%f"  2> /dev/null
+ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
 ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
@@ -142,6 +142,7 @@ ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
 ux=EDIT any,F7,*,gvim "%f" &
 #xterm+vim
 ux=EDITmany,F10,*,myterm vim "%f" &
+ux=EDITzvuk,F12,*,myterm vim "%f" opis ~/src/gramo/abbr &
 ux=e3tags,F3,.[].<>.,cd "%F" && bash e3.tags.spisyk %w
 
 # following user commands are bound to the UserMenu -- key `u'
@@ -213,6 +214,7 @@ see=*.mpeg,filmid.sh "%f"
 see=*.vob,filmid.sh "%f"
 see=*.flac,filmid.sh "%f"
 see=*.ape,filmid.sh "%f"
+see=*.mka,filmid.sh "%f"
 see=*.png,file -L "%f" 
 see=*.pnm,pnmfile "%f" 
 see=*.jpg,jhead "%f" 
@@ -256,7 +258,7 @@ cCYAN=.[].<>.
 #exe
 cGREEN=.**.
 #media
-cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.flac.ape.wv.
+cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.flac.ape.wv.mka.3gp.
 #link
 chBLUE=.->.
 #cRED=.dotfiles.
