--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -118,7 +118,7 @@ ux=run python,INS,.py.,python "%F" %w
 
 # play media
 ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
-ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
+ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.aac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
 ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
@@ -127,8 +127,7 @@ ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
 ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F" 
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
-ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.flac.ape.wv.,sumtim2.py "%F" %w
-ux=info,F6,.[].<>.mkv.mp4.,mkvmerge -i "%F" %w
+ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
 ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f" 
 ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/ 
@@ -213,6 +212,7 @@ see=*.mpg,filmid.sh "%f"
 see=*.mpeg,filmid.sh "%f"
 see=*.vob,filmid.sh "%f"
 see=*.flac,filmid.sh "%f"
+see=*.aac,filmid.sh "%f"
 see=*.ape,filmid.sh "%f"
 see=*.mka,filmid.sh "%f"
 see=*.png,file -L "%f" 
@@ -258,7 +258,7 @@ cCYAN=.[].<>.
 #exe
 cGREEN=.**.
 #media
-cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.flac.ape.wv.mka.3gp.
+cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.aac.flac.ape.wv.mka.3gp.
 #link
 chBLUE=.->.
 #cRED=.dotfiles.
