--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -202,8 +202,8 @@ see=*.mov,filmid.sh "%f"
 see=*.MOV,filmid.sh "%f"
 see=*.m2ts,filmid.sh "%f"
 see=*.ts,filmid.sh "%f"
-see=*.mkv,filmid.sh "%f"
-see=*.m4v,filmid.sh "%f"
+see=*.mk[av],filmid.sh "%f"
+see=*.m4[av],filmid.sh "%f"
 see=*.mp4,filmid.sh "%f"
 see=*.3gp,filmid.sh "%f"
 see=*.webm,filmid.sh "%f"
@@ -214,7 +214,6 @@ see=*.vob,filmid.sh "%f"
 see=*.flac,filmid.sh "%f"
 see=*.aac,filmid.sh "%f"
 see=*.ape,filmid.sh "%f"
-see=*.mka,filmid.sh "%f"
 see=*.png,file -L "%f" 
 see=*.pnm,pnmfile "%f" 
 see=*.jpg,jhead "%f" 
