--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -117,7 +117,7 @@ ux=VIEW TAR,INS,.gz.,gunzip -c "%f" | tar tvf - | less
 ux=run python,INS,.py.,python "%F" %w
 
 # play media
-ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
+ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.MP4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
 ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.aac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
@@ -129,20 +129,18 @@ ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
-ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f" 
-ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/ 
+#ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f" 
+#ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/ 
+ux=renamopis,F9,.[].<>.,renfilesopis "%F" 
+ux=renamopis,F9,.flac.wav.cut.size.findm.,renfilesopis . 
+ux=renamopis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/okk ; pkill -f "^vim.*%c" 
 ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f" 
 # edit
 ux=EDIT pic,F7,.gif.tiff.jpg.png.,gimp "%f" 2> /dev/null 1> /dev/null %n &
 ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
-#instead
-#ux=EDIT any,F7,*,vim "%f" 
-#gvim
 ux=EDIT any,F7,*,gvim "%f" &
-#xterm+vim
-ux=EDITmany,F10,*,myterm vim "%f" &
-ux=EDITzvuk,F12,*,myterm vim "%f" opis ~/src/gramo/abbr &
-ux=e3tags,F3,.[].<>.,cd "%F" && bash e3.tags.spisyk %w
+#ux=EDITmany,F10,*,myterm vim "%f" &
+ux=EDITzvuk,F12,*,myterm vim "%F" opis ~/src/gramo/abbr &
 
 # following user commands are bound to the UserMenu -- key `u'
 # note that instead of keyname there's `menu' string!
@@ -204,7 +202,7 @@ see=*.m2ts,filmid.sh "%f"
 see=*.ts,filmid.sh "%f"
 see=*.mk[av],filmid.sh "%f"
 see=*.m4[av],filmid.sh "%f"
-see=*.mp4,filmid.sh "%f"
+see=*.[mM][pP]4,filmid.sh "%f"
 see=*.3gp,filmid.sh "%f"
 see=*.webm,filmid.sh "%f"
 see=*.swf,filmid.sh "%f"
